<resources>
    <!-- Main Activity -->
    <string name="app_name">Netflix Clone</string>
    <string name="cd_btn_menu">Menu Button</string>
    <string name="cd_iv_logo">Logo Image</string>
    <string name="cd_btn_search">Search Button</string>
    <string name="btn_discover">DISCOVER</string>
    <string name="btn_categories">CATEGORIES</string>
    <string name="btn_specials">SPECIALS</string>
    <string name="btn_new">NEW</string>
    <string name="tv_mylist">My List</string>
    <string name="cd_mylist">My List Button</string>
    <string name="tv_popular">Popular</string>
    <string name="cd_popular">Popular Button</string>

    <!-- Detail Activity -->
    <string name="cd_detail_back">Back Button On Detail Activity</string>
    <string name="cd_detail_search">Search Button On Detail Activity</string>
    <string name="cd_detail_play">Play Button On Detail Activity</string>
    <string name="cd_detail_add">Add Button On Detail Activity</string>
    <string name="cd_detail_share">Share Button On Detail Activity</string>
    <string name="hs_detail_title">THE NUTCRACKER AND THE FOUR REALMS</string>
    <string name="hs_detail_genre">Adventure, Family, Fantasy</string>
    <string name="tv_detail_label_year">Year</string>
    <string name="hs_detail_year">2018</string>
    <string name="tv_detail_label_country">Country</string>
    <string name="hs_detail_country">USA</string>
    <string name="tv_detail_label_length">Length</string>
    <string name="hs_detail_length">100 min</string>
    <string name="tv_detail_desc">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
    </string>
    <string name="tv_detail_screenshots">Screenshots</string>
    <string name="cd_detail_screenshots">Screenshots Button</string>
    <string name="cd_detail_rep_image">Rep Image</string>

    <!-- Onboarding Activity -->
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="btn_signup">회원가입</string>
    <string name="btn_login">로그인</string>
    <string name="tv_onboarding_title_0">
        영화, TV, 프로그램 등을 무제한으로
    </string>
    <string name="tv_onboarding_title_1">
        저장해서 오프라인으로 시청하세요
    </string>
    <string name="tv_onboarding_title_2">
        약정도 광고도 없다
    </string>
    <string name="tv_onboarding_desc_0">
        다양한 디바이스에서 자유롭게 시청하고 언제든지 해지하세요.
    </string>
    <string name="tv_onboarding_desc_1">
        미리 저장해놓으면 오프라인에서도 지루할 틈이 없습니다.
    </string>
    <string name="tv_onboarding_desc_2">
        가입은 당일, 해지는 원할 때.
    </string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>