<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical">

    <!-- Rep Image -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/detail_rep_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cropToPadding="false"
            android:scaleType="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius_bottom_left="100dp"
            app:riv_corner_radius_bottom_right="100dp"
            tools:src="@drawable/nutcracker" />

        <ImageButton
            android:id="@+id/ib_detail_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/cd_detail_back"
            android:padding="10dp"
            android:tint="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/abc_vector_test" />

        <ImageButton
            android:id="@+id/ib_detail_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="#00FFFFFF"
            android:contentDescription="@string/cd_detail_search"
            android:padding="10dp"
            android:tint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_search" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_detail_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_imagebutton"
            android:contentDescription="@string/cd_detail_play"
            android:padding="30dp"
            android:tint="#E91E63"
            app:srcCompat="@android:drawable/ic_media_play"
            tools:srcCompat="@android:drawable/ic_media_play" />
    </LinearLayout>

    <!-- Add and Share Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ib_detail_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/cd_detail_add"
            android:padding="10dp"
            android:tint="#000000"
            app:srcCompat="@android:drawable/ic_input_add" />

        <ImageButton
            android:id="@+id/ib_detail_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/cd_detail_share"
            android:padding="10dp"
            android:tint="#000000"
            app:srcCompat="@android:drawable/ic_menu_share" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hs_detail_title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_detail_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hs_detail_genre"
        android:textAlignment="center" />


</LinearLayout>