<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/whole_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Toolbar -->
    <LinearLayout
        android:id="@+id/layout_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#673AB7"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/cd_btn_menu"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:contentDescription="@string/cd_iv_logo"
            app:srcCompat="@drawable/netflix_logo" />

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/cd_btn_menu"
            app:srcCompat="@android:drawable/ic_menu_search" />

    </LinearLayout>

    <!-- Content -->
    <ScrollView
        android:id="@+id/sv_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/layout_sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Newest -->
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_newest_slider"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="20dp"
                android:paddingStart="80dp"
                android:paddingTop="10dp"
                android:paddingEnd="80dp"
                android:paddingBottom="10dp">

            </androidx.viewpager2.widget.ViewPager2>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_discover"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/category_button"
                        android:text="@string/btn_discover"
                        android:textColor="#FFFFFF" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_categories"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/category_button"
                        android:text="@string/btn_categories"
                        android:textColor="#FFFFFF" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_specials"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/category_button"
                        android:text="@string/btn_specials"
                        android:textColor="#FFFFFF" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_new"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/category_button"
                        android:text="@string/btn_new"
                        android:textColor="#FFFFFF" />

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_mylist"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="start|center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/tv_mylist"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/ib_mylist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#009C27B0"
                    android:contentDescription="@string/cd_mylist"
                    android:tint="#000000"
                    app:srcCompat="@drawable/abc_vector_test" />

            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_mylist"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="start|center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/tv_popular"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/ib_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#009C27B0"
                    android:contentDescription="@string/cd_popular"
                    android:tint="#000000"
                    app:srcCompat="@drawable/abc_vector_test" />

            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_popular"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <!-- Category Buttons -->

            <!-- My List -->

            <!-- Popular -->

        </LinearLayout>

    </ScrollView>

</LinearLayout>