<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".OnboardingActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_onboarding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_onboarding_logo"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/cd_iv_logo"
            android:scaleType="fitStart"
            android:src="@drawable/netflix_logo" />

        <Button
            android:id="@+id/btn_onboarding_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0"
            android:background="#00FFFFFF"
            android:text="@string/btn_login"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <me.relex.circleindicator.CircleIndicator3
        android:id="@+id/ic_for_vp_onboarding"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_onboarding_signup" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_onboarding_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/category_button"
        android:text="@string/btn_signup"
        android:textColor="#FFFEFE"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>